--- a/index.html
+++ b/index.html
@@ -83,34 +83,36 @@
           name="customer-type"
           id="residential"
           value="Radio"
+          class="input-radio"
         /><label for="html">Residential</label>
         <input
           type="radio"
           name="customer-type"
           id="commercial"
           value="Commercial"
+          class="input-radio"
         /><label for="html">Commercial</label><br />
         <label for="html" class="label-format">Name (required)</label><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <label for="html" class="label-format"
           >Telephone number (required)</label
         ><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <label for="html" class="label-format">Email Address (required)</label
         ><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <label for="html" class="label-format"
           >Service Location Address (required)</label
         ><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <label for="html" class="label-format">City (required)</label><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <label for="html" class="label-format">Zipcode (required)</label><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <label for="html" class="label-format"
           >Current Provider (required)</label
         ><br />
-        <input type="text" name="name" id="name" /><br />
+        <input type="text" name="name" id="name" class="input-text" /><br />
         <input type="button" class="label-format" value="Send" />
 
         <br />
