--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
     <section class="contact-us">
       <h2 class="contact-title">Contact Us</h2>
-      <p>I'm Interested in:</p>
+      <p class="contact-sub-title">I'm Interested in:</p>
       <form action="">
         <!-- Radio Input for Form -->
         <input
@@ -120,8 +120,9 @@
         <input type="text" name="name" id="name" class="input-text" /><br />
 
         <!-- Button Input for Form -->
-        <input type="button" class="button-format" value="Send" />
-
+        <div class="button">
+          <input type="button" class="button-format" value="Send" />
+        </div>
         <br />
       </form>
     </section>
